--- a/team.html
+++ b/team.html
@@ -35,6 +35,7 @@
   │          SECTION HEADER : START             │
   └─────────────────────────────────────────────┘
   -->
+
     <header class="header">
       <div class="container-auto">
         <div class="header__container">
@@ -99,6 +100,293 @@
         </div>
       </div>
     </header>
+
+    <!--
+  ┌─────────────────────────────────────────────┐
+  │          SECTION BAANER : START             │
+  └─────────────────────────────────────────────┘
+  -->
+
+    <section class="section--banner">
+      <div class="banner">
+        <div class="container-auto">
+          <div class="banner__container">
+            <div class="heading--primary">
+              <h1>our  <span class="cl-gradient">team</span></h1>
+            </div>
+            <div class="banner__crums mt-[1.8rem] text-cp">
+              <a href="#">home</a> / <span>team</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--
+  ┌─────────────────────────────────────────────┐
+  │  SECTION MARQUEE SCROLL   : START           │
+  └─────────────────────────────────────────────┘
+  -->
+
+    <div class="scrolling-text bg-gradient">
+      <div class="rail">
+        <h1 class="category ml-30">WIREFRAME DESIGN</h1>
+        <h1 class="category">MOBILE APP DESIGN</h1>
+        <h1 class="category">WEBSITE DESIGN</h1>
+        <h1 class="category">WEBSITE DESIGN</h1>
+        <h1 class="category">DASHBOARD DESIGN</h1>
+        <!-- <h1 class="category">PRODUCT DESIGN</h1> -->
+      </div>
+    </div>
+
+
+#
+
+    <!--
+  ┌─────────────────────────────────────────────┐
+  │       SECTION   TEAMS          : START      │
+  └─────────────────────────────────────────────┘
+  -->
+
+    <section class="section--team mt-[17rem] max-[670px]:mt-[10rem]">
+      <div class="team">
+        <div class="container-auto">
+          <div class="approuch__title">
+            <div class="heading--tertiary justify-center">
+              <h3>our team</h3>
+            </div>
+            <div class="heading--secondary mt-[1rem]">
+              <h2>
+                get to know our creative
+                <span class="cl-gradient"> experts </span>
+              </h2>
+            </div>
+          </div>
+          <div class="team__container">
+            <div class="team__item">
+              <div class="team__img shine-glass-effect">
+                <img src="asset/images/team-1.jpg" alt="experts team menber" />
+                <div class="team__social">
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="team__info text-center">
+                <div class="heading--secondary-sm">
+                  <h2>cameron williamson</h2>
+                </div>
+                <div class="text mt-[1rem]">
+                  <p>creative directer</p>
+                </div>
+              </a>
+            </div>
+            <div class="team__item">
+              <div class="team__img shine-glass-effect">
+                <img src="asset/images/team-1.jpg" alt="experts team menber" />
+                <div class="team__social">
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="team__info text-center">
+                <div class="heading--secondary-sm">
+                  <h2>cameron williamson</h2>
+                </div>
+                <div class="text mt-[1rem]">
+                  <p>creative directer</p>
+                </div>
+              </a>
+            </div>
+            <div class="team__item">
+              <div class="team__img shine-glass-effect">
+                <img src="asset/images/team-1.jpg" alt="experts team menber" />
+                <div class="team__social">
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="team__info text-center">
+                <div class="heading--secondary-sm">
+                  <h2>cameron williamson</h2>
+                </div>
+                <div class="text mt-[1rem]">
+                  <p>creative directer</p>
+                </div>
+              </a>
+            </div>
+            <div class="team__item">
+              <div class="team__img shine-glass-effect">
+                <img src="asset/images/team-1.jpg" alt="experts team menber" />
+                <div class="team__social">
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="team__info text-center">
+                <div class="heading--secondary-sm">
+                  <h2>cameron williamson</h2>
+                </div>
+                <div class="text mt-[1rem]">
+                  <p>creative directer</p>
+                </div>
+              </a>
+            </div>
+             <div class="team__item">
+              <div class="team__img shine-glass-effect">
+                <img src="asset/images/team-1.jpg" alt="experts team menber" />
+                <div class="team__social">
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="team__info text-center">
+                <div class="heading--secondary-sm">
+                  <h2>cameron williamson</h2>
+                </div>
+                <div class="text mt-[1rem]">
+                  <p>creative directer</p>
+                </div>
+              </a>
+            </div>
+             <div class="team__item">
+              <div class="team__img shine-glass-effect">
+                <img src="asset/images/team-1.jpg" alt="experts team menber" />
+                <div class="team__social">
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="team__info text-center">
+                <div class="heading--secondary-sm">
+                  <h2>cameron williamson</h2>
+                </div>
+                <div class="text mt-[1rem]">
+                  <p>creative directer</p>
+                </div>
+              </a>
+            </div>
+             <div class="team__item">
+              <div class="team__img shine-glass-effect">
+                <img src="asset/images/team-1.jpg" alt="experts team menber" />
+                <div class="team__social">
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="team__info text-center">
+                <div class="heading--secondary-sm">
+                  <h2>cameron williamson</h2>
+                </div>
+                <div class="text mt-[1rem]">
+                  <p>creative directer</p>
+                </div>
+              </a>
+            </div>
+             <div class="team__item">
+              <div class="team__img shine-glass-effect">
+                <img src="asset/images/team-1.jpg" alt="experts team menber" />
+                <div class="team__social">
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="icon icon--primary">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="team__info text-center">
+                <div class="heading--secondary-sm">
+                  <h2>cameron williamson</h2>
+                </div>
+                <div class="text mt-[1rem]">
+                  <p>creative directer</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
 
     <!--
   ┌─────────────────────────────────────────────┐
@@ -278,15 +566,6 @@
           </div>
         </div>
       </div>
-      <div class="map">
-        <iframe
-          src="https://www.google.com/maps?q=New+York+City&z=12&output=embed"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-          title="Google Map: New York City"
-        ></iframe>
-      </div>
     </section>
 
     <!--
@@ -325,18 +604,21 @@
               </p>
             </div>
             <div class="footer__icons mt-[2.2rem]">
-              <div class="footer__icon">
-                <a href="#"> <i class="fa-light fa-basketball"></i></a>
-              </div>
-              <div class="footer__icon">
-                <a href="#"> <i class="fa-brands fa-facebook-f"></i></a>
-              </div>
-              <div class="footer__icon">
-                <a href="#"> <i class="fa-brands fa-instagram"></i></a>
-              </div>
-              <div class="footer__icon">
-                <a href="#"> <i class="fa-brands fa-linkedin-in"></i></a>
-              </div>
+              <a href="#" class="icon icon--primary">
+                <i class="fa-light fa-basketball"></i
+              ></a>
+
+              <a href="#" class="icon icon--primary">
+                <i class="fa-brands fa-facebook-f"></i
+              ></a>
+
+              <a href="#" class="icon icon--primary">
+                <i class="fa-brands fa-instagram"></i
+              ></a>
+
+              <a href="#" class="icon icon--primary">
+                <i class="fa-brands fa-linkedin-in"></i
+              ></a>
             </div>
           </div>
           <div class="footer__item">
@@ -392,8 +674,9 @@
     <script src="asset/js/splide.min.js"></script>
     <script src="/asset/js/gsa.js"></script>
     <script src="/asset/js/ScrollTrigge.js"></script>
-    <script src="asset/js/custom.js"></script>
     <script src="asset/js/swiper-bundle.js"></script>
+    <script src="asset/js/fancybox.js"></script>
+    <script src="asset/js/custom.js"></script>
     <script src="asset/js/lib-init.js"></script>
   </body>
 </html>
