--- a/porfolio.html
+++ b/porfolio.html
@@ -49,25 +49,23 @@
 
             <ul class="header__list">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html" class="active">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html" class="active">Services</a></li>
               <li><a href="blog.html">Blog</a></li>
 
               <li class="dropdown">
                 <a href="#">Pages </a>
                 <ul>
-                  <li><a href="#">services details</a></li>
-                  <li><a href="#">blog details </a></li>
-                  <li><a href="#">porfolio </a></li>
-                  <li><a href="#">portfolio details </a></li>
-                  <li><a href="#">our team </a></li>
-                  <li><a href="#">pricing plan </a></li>
-                  <li><a href="#">testimonials </a></li>
-                  <li><a href="#">image gallery </a></li>
-                  <li><a href="#">video gallery </a></li>
-                  <li><a href="#"> FAQS </a></li>
-                  <li><a href="#"> 404 </a></li>
-
+                  <li><a href="service-single-1.html">services details</a></li>
+                  <li><a href="blog.html">blog details </a></li>
+                  <li><a href="porfolio.html">porfolio </a></li>
+                  <li><a href="porfolio-single.html">portfolio details </a></li>
+                  <li><a href="team.html">our team </a></li>
+                  <li><a href="pricing.html">pricing plan </a></li>
+                  <li><a href="testimonial.html">testimonials </a></li>
+                  <li><a href="img-gallery.html">image gallery </a></li>
+                  <li><a href="video-gallery.html">video gallery </a></li>
+                  <li><a href="mix-gallery.html">mix  gallery </a></li>
                   <li class="sub-dropdown">
                     <a href="#">header layout </a>
                     <ul>
