--- a/service-single-1.html
+++ b/service-single-1.html
@@ -36,73 +36,70 @@
   │          SECTION HEADER : START             │
   └─────────────────────────────────────────────┘
   -->
-
-  <header class="header">
-    <div class="container-auto">
-      <div class="header__container">
-        <div class="header__logo">
-          <a href="index.html"> <img src="asset/images/logo.svg" alt="" /></a>
-        </div>
-        <nav class="header__nav header__nav-hidden">
-          <div class="header__close">
-            <i class="fa-solid fa-xmark"></i>
+    <header class="header">
+      <div class="container-auto">
+        <div class="header__container">
+          <div class="header__logo">
+            <a href="index.html"> <img src="asset/images/logo.svg" alt="" /></a>
           </div>
+          <nav class="header__nav header__nav-hidden">
+            <div class="header__close">
+              <i class="fa-solid fa-xmark"></i>
+            </div>
 
-          <ul class="header__list">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <ul class="header__list">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html" class="active">Services</a></li>
+              <li><a href="blog.html">Blog</a></li>
 
-            <li class="dropdown">
-              <a href="#">Pages </a>
-              <ul>
-                <li><a href="#">services details</a></li>
-                <li><a href="#">blog details </a></li>
-                <li><a href="#">porfolio </a></li>
-                <li><a href="#">portfolio details </a></li>
-                <li><a href="#">our team </a></li>
-                <li><a href="#">pricing plan </a></li>
-                <li><a href="#">testimonials </a></li>
-                <li><a href="#">image gallery </a></li>
-                <li><a href="#">video gallery </a></li>
-                <li><a href="#"> FAQS </a></li>
-                <li><a href="#"> 404 </a></li>
+              <li class="dropdown">
+                <a href="#">Pages </a>
+                <ul>
+                  <li><a href="service-single-1.html">services details</a></li>
+                  <li><a href="blog.html">blog details </a></li>
+                  <li><a href="porfolio.html">porfolio </a></li>
+                  <li><a href="porfolio-single.html">portfolio details </a></li>
+                  <li><a href="team.html">our team </a></li>
+                  <li><a href="pricing.html">pricing plan </a></li>
+                  <li><a href="testimonial.html">testimonials </a></li>
+                  <li><a href="img-gallery.html">image gallery </a></li>
+                  <li><a href="video-gallery.html">video gallery </a></li>
+                  <li><a href="mix-gallery.html">mix  gallery </a></li>
+                  <li class="sub-dropdown">
+                    <a href="#">header layout </a>
+                    <ul>
+                      <li><a href="#">header layout 1</a></li>
+                      <li><a href="#">header layout 2</a></li>
+                      <li><a href="#">header layout 3</a></li>
+                    </ul>
+                  </li>
 
-                <li class="sub-dropdown">
-                  <a href="#">header layout </a>
-                  <ul>
-                    <li><a href="#">header layout 1</a></li>
-                    <li><a href="#">header layout 2</a></li>
-                    <li><a href="#">header layout 3</a></li>
-                  </ul>
-                </li>
+                  <li class="sub-dropdown">
+                    <a href="#">footer layout </a>
+                    <ul>
+                      <li><a href="#">footer layout 1</a></li>
+                      <li><a href="#">footer layout 2</a></li>
+                      <li><a href="#">footer layout 3</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
 
-                <li class="sub-dropdown">
-                  <a href="#">footer layout </a>
-                  <ul>
-                    <li><a href="#">footer layout 1</a></li>
-                    <li><a href="#">footer layout 2</a></li>
-                    <li><a href="#">footer layout 3</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </nav>
-        <div class="header__btn">
-          <a href="#" class="btn btn--primary">download CV</a>
-          <div class="header__menu bg-gradient-hvr">
-            <span></span>
-            <span></span>
-            <span></span>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
+          <div class="header__btn">
+            <a href="#" class="btn btn--primary">download CV</a>
+            <div class="header__menu bg-gradient-hvr">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
   <section class="section--hero">
     <div class="hero hero-3">
@@ -1000,29 +997,29 @@
   <script>
     gsap.registerPlugin(ScrollTrigger);
 
-    const mm = gsap.matchMedia();
+    ScrollTrigger.matchMedia({
+      // ✅ Desktop (above 1400px)
+      "(min-width: 1400px)": function () {
+        gsap.to(".hero__video-2", {
+          borderRadius: "10px",
+          scale: 3.7, // desktop value
+          xPercent: -95,
+          yPercent: 190,
+          y: "-10%",
+          scrollTrigger: {
+            trigger: ".hero",
+            start: "top -30%",
+            end: "top -90%",
+            scrub: 1,
+          },
+        });
+      },
 
-    mm.add("(min-width: 1200px)", () => {
-      gsap.to(".hero__video-2", {
-        borderRadius: "10px",
-        scale: 3.7,        // desktop value
-        xPercent: -95,
-        yPercent: 190,
-        y: "-10%",
-        ease: "power4.out",
-        scrollTrigger: {
-          trigger: ".hero",
-          start: "top -30%",
-          end: "top -90%",
-          scrub: 1.5,
-        },
-      });
+      // ✅ Smaller screens (below 1400px)
+
     });
-  </script>
 
+  </script>
 </body>
 
 </html>
-
-
-
