--- a/services.html
+++ b/services.html
@@ -56,18 +56,16 @@
               <li class="dropdown">
                 <a href="#">Pages </a>
                 <ul>
-                  <li><a href="#">services details</a></li>
-                  <li><a href="#">blog details </a></li>
-                  <li><a href="#">porfolio </a></li>
-                  <li><a href="#">portfolio details </a></li>
-                  <li><a href="#">our team </a></li>
-                  <li><a href="#">pricing plan </a></li>
-                  <li><a href="#">testimonials </a></li>
-                  <li><a href="#">image gallery </a></li>
-                  <li><a href="#">video gallery </a></li>
-                  <li><a href="#"> FAQS </a></li>
-                  <li><a href="#"> 404 </a></li>
-
+                  <li><a href="service-single-1.html">services details</a></li>
+                  <li><a href="blog.html">blog details </a></li>
+                  <li><a href="porfolio.html">porfolio </a></li>
+                  <li><a href="porfolio-single.html">portfolio details </a></li>
+                  <li><a href="team.html">our team </a></li>
+                  <li><a href="pricing.html">pricing plan </a></li>
+                  <li><a href="testimonial.html">testimonials </a></li>
+                  <li><a href="img-gallery.html">image gallery </a></li>
+                  <li><a href="video-gallery.html">video gallery </a></li>
+                  <li><a href="mix-gallery.html">mix  gallery </a></li>
                   <li class="sub-dropdown">
                     <a href="#">header layout </a>
                     <ul>
