--- a/video-gallery.html
+++ b/video-gallery.html
@@ -35,6 +35,7 @@
   │          SECTION HEADER : START             │
   └─────────────────────────────────────────────┘
   -->
+
     <header class="header">
       <div class="container-auto">
         <div class="header__container">
@@ -99,6 +100,165 @@
         </div>
       </div>
     </header>
+
+    <!--
+  ┌─────────────────────────────────────────────┐
+  │          SECTION BAANER : START             │
+  └─────────────────────────────────────────────┘
+  -->
+
+    <section class="section--banner">
+      <div class="banner">
+        <div class="container-auto">
+          <div class="banner__container">
+            <div class="heading--primary">
+              <h1>Video <span class="cl-gradient">gallery </span></h1>
+            </div>
+            <div class="banner__crums mt-[1.8rem] text-cp">
+              <a href="#">home</a> / <span>video-gallery </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--
+  ┌─────────────────────────────────────────────┐
+  │  SECTION MARQUEE SCROLL   : START           │
+  └─────────────────────────────────────────────┘
+  -->
+
+    <div class="scrolling-text bg-gradient">
+      <div class="rail">
+        <h1 class="category ml-30">WIREFRAME DESIGN</h1>
+        <h1 class="category">MOBILE APP DESIGN</h1>
+        <h1 class="category">WEBSITE DESIGN</h1>
+        <h1 class="category">WEBSITE DESIGN</h1>
+        <h1 class="category">DASHBOARD DESIGN</h1>
+        <!-- <h1 class="category">PRODUCT DESIGN</h1> -->
+      </div>
+    </div>
+
+    <!--
+  ┌─────────────────────────────────────────────┐
+  │     SECTION VIDEO GALLERY    : START        │
+  └─────────────────────────────────────────────┘
+  -->
+
+    <section class="section-video-gallery mt-[10rem]">
+      <div class="container-auto">
+        <div class="gallery__grid">
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+          <div
+            class="gallery__item video__play-btn"
+            data-src="https://www.youtube.com/watch?v=9CJfSLzELfM&list=RD0xqSJxbyyA0&index=12"
+          >
+            <div class="gallery__thumbnail">
+              <img src="asset/images/intro-bg-image.jpg" alt="MP4 Video" />
+            </div>
+            <!-- Play Button -->
+            <div class="gallery_btn">
+              <i class="fas fa-play bg-gradient-hvr"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--
   ┌─────────────────────────────────────────────┐
@@ -278,15 +438,6 @@
           </div>
         </div>
       </div>
-      <div class="map">
-        <iframe
-          src="https://www.google.com/maps?q=New+York+City&z=12&output=embed"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-          title="Google Map: New York City"
-        ></iframe>
-      </div>
     </section>
 
     <!--
@@ -325,18 +476,21 @@
               </p>
             </div>
             <div class="footer__icons mt-[2.2rem]">
-              <div class="footer__icon">
-                <a href="#"> <i class="fa-light fa-basketball"></i></a>
-              </div>
-              <div class="footer__icon">
-                <a href="#"> <i class="fa-brands fa-facebook-f"></i></a>
-              </div>
-              <div class="footer__icon">
-                <a href="#"> <i class="fa-brands fa-instagram"></i></a>
-              </div>
-              <div class="footer__icon">
-                <a href="#"> <i class="fa-brands fa-linkedin-in"></i></a>
-              </div>
+              <a href="#" class="icon icon--primary">
+                <i class="fa-light fa-basketball"></i
+              ></a>
+
+              <a href="#" class="icon icon--primary">
+                <i class="fa-brands fa-facebook-f"></i
+              ></a>
+
+              <a href="#" class="icon icon--primary">
+                <i class="fa-brands fa-instagram"></i
+              ></a>
+
+              <a href="#" class="icon icon--primary">
+                <i class="fa-brands fa-linkedin-in"></i
+              ></a>
             </div>
           </div>
           <div class="footer__item">
@@ -392,8 +546,9 @@
     <script src="asset/js/splide.min.js"></script>
     <script src="/asset/js/gsa.js"></script>
     <script src="/asset/js/ScrollTrigge.js"></script>
-    <script src="asset/js/custom.js"></script>
     <script src="asset/js/swiper-bundle.js"></script>
+    <script src="asset/js/fancybox.js"></script>
+    <script src="asset/js/custom.js"></script>
     <script src="asset/js/lib-init.js"></script>
   </body>
 </html>
