updated new cod

--- a/mix-gallery.html
+++ b/mix-gallery.html
@@ -50,7 +50,7 @@
             <ul class="header__list">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html" class="active">Services</a></li>
+              <li><a href="services.html" >Services</a></li>
               <li><a href="blog.html">Blog</a></li>
 
               <li class="dropdown">
@@ -65,7 +65,7 @@
                   <li><a href="testimonial.html">testimonials </a></li>
                   <li><a href="img-gallery.html">image gallery </a></li>
                   <li><a href="video-gallery.html">video gallery </a></li>
-                  <li><a href="mix-gallery.html">mix  gallery </a></li>
+                  <li><a href="mix-gallery.html" class="active">mix  gallery </a></li>
                   <li class="sub-dropdown">
                     <a href="#">header layout </a>
                     <ul>
