--- a/service-single-2.html
+++ b/service-single-2.html
@@ -51,13 +51,15 @@
             <ul class="header__list">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html" class="active">Services</a></li>
+              <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Blog</a></li>
 
               <li class="dropdown">
                 <a href="#">Pages </a>
                 <ul>
-                  <li><a href="service-single-1.html">services details</a></li>
+                  <li><a href="service-single-1.html " ">services single 1</a></li>
+                  <li><a href="service-single-2.html" class="active">services single 2</a></li>
+                  <li><a href="service-single-3.html">services single 3 </a></li>
                   <li><a href="blog.html">blog details </a></li>
                   <li><a href="porfolio.html">porfolio </a></li>
                   <li><a href="porfolio-single.html">portfolio details </a></li>
