--- a/contact.html
+++ b/contact.html
@@ -49,13 +49,15 @@
             <ul class="header__list">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html" class="active">Services</a></li>
+              <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Blog</a></li>
 
               <li class="dropdown">
                 <a href="#">Pages </a>
                 <ul>
-                  <li><a href="service-single-1.html">services details</a></li>
+                  <li><a href="service-single-1.html " >services single 1</a></li>
+                  <li><a href="service-single-2.html" >services single 2</a></li>
+                  <li><a href="service-single-3.html">services single 3 </a></li>
                   <li><a href="blog.html">blog details </a></li>
                   <li><a href="porfolio.html">porfolio </a></li>
                   <li><a href="porfolio-single.html">portfolio details </a></li>
@@ -64,7 +66,7 @@
                   <li><a href="testimonial.html">testimonials </a></li>
                   <li><a href="img-gallery.html">image gallery </a></li>
                   <li><a href="video-gallery.html">video gallery </a></li>
-                  <li><a href="mix-gallery.html">mix  gallery </a></li>
+                  <li><a href="mix-gallery.html">mix gallery </a></li>
                   <li class="sub-dropdown">
                     <a href="#">header layout </a>
                     <ul>
@@ -85,7 +87,7 @@
                 </ul>
               </li>
 
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="contact.html" class="active">Contact Us</a></li>
             </ul>
           </nav>
           <div class="header__btn">
