--- a/service-single-3.html
+++ b/service-single-3.html
@@ -51,13 +51,15 @@
             <ul class="header__list">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html" class="active">Services</a></li>
+              <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Blog</a></li>
 
               <li class="dropdown">
                 <a href="#">Pages </a>
                 <ul>
-                  <li><a href="service-single-1.html">services details</a></li>
+                  <li><a href="service-single-1.html " >services single 1</a></li>
+                  <li><a href="service-single-2.html" >services single 2</a></li>
+                  <li><a href="service-single-3.html" class="active">services single 3 </a></li>
                   <li><a href="blog.html">blog details </a></li>
                   <li><a href="porfolio.html">porfolio </a></li>
                   <li><a href="porfolio-single.html">portfolio details </a></li>
@@ -988,28 +990,6 @@
   <script src="asset/js/custom.js"></script>
   <script src="asset/js/swiper-bundle.js"></script>
   <script src="asset/js/lib-init.js"></script>
-
-
-  <script>
-    gsap.registerPlugin(ScrollTrigger);
-
-    // Wrap animation in a matchMedia check
-    gsap.matchMedia().add("(min-width: 1200px)", () => {
-      gsap.to(".hero-4__video", {
-        xPercent: -45,
-        scale: 1.25,
-        ease: "power4.out",
-        scrollTrigger: {
-          trigger: ".hero-4",
-          start: "top top",
-          end: "bottom -100%",
-          scrub: 1.5,
-          pin: true,
-          // markers: true,
-        },
-      });
-    });
-  </script>
 
 
 
