--- a/team.html
+++ b/team.html
@@ -50,17 +50,19 @@
             <ul class="header__list">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html" class="active">Services</a></li>
+              <li><a href="services.html" >Services</a></li>
               <li><a href="blog.html">Blog</a></li>
 
               <li class="dropdown">
                 <a href="#">Pages </a>
                 <ul>
-                  <li><a href="service-single-1.html">services details</a></li>
+                   <li><a href="service-single-1.html " >services single 1</a></li>
+                  <li><a href="service-single-2.html" >services single 2</a></li>
+                  <li><a href="service-single-3.html">services single 3 </a></li>
                   <li><a href="blog.html">blog details </a></li>
                   <li><a href="porfolio.html">porfolio </a></li>
                   <li><a href="porfolio-single.html">portfolio details </a></li>
-                  <li><a href="team.html">our team </a></li>
+                  <li><a href="team.html" class="active">our team </a></li>
                   <li><a href="pricing.html">pricing plan </a></li>
                   <li><a href="testimonial.html">testimonials </a></li>
                   <li><a href="img-gallery.html">image gallery </a></li>
