--- a/mix-gallery.html
+++ b/mix-gallery.html
@@ -56,7 +56,9 @@
               <li class="dropdown">
                 <a href="#">Pages </a>
                 <ul>
-                  <li><a href="service-single-1.html">services details</a></li>
+                  <li><a href="service-single-1.html " >services single 1</a></li>
+                  <li><a href="service-single-2.html" >services single 2</a></li>
+                  <li><a href="service-single-3.html">services single 3 </a></li>>
                   <li><a href="blog.html">blog details </a></li>
                   <li><a href="porfolio.html">porfolio </a></li>
                   <li><a href="porfolio-single.html">portfolio details </a></li>
